add controle de session